--- a/HTML/05042025/1.html
+++ b/HTML/05042025/1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Master Fullstack Development</title>
-    <link rel="icon" href="image.png" type="image/x-icon"></link>
+    <link rel="icon" href="../Images/image.png" type="image/x-icon"></link>
 </head>
 <body>
     <h1>This is Header 1</h1>
@@ -17,7 +17,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem sint quod quasi quae iste aliquid, libero quo repudiandae sit excepturi provident sed illum assumenda omnis sequi perspiciatis illo? Excepturi, perferendis?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem sint quod quasi quae iste aliquid, libero quo repudiandae sit excepturi provident sed illum assumenda omnis sequi perspiciatis illo? Excepturi, perferendis?</p>
 
-<img src="nathan-da-silva-k-rKfqSm4L4-unsplash.jpg" width="400px"></img>
+<img src="../Images/nathan-da-silva-k-rKfqSm4L4-unsplash.jpg" width="400px"></img>
 <br>
 <a href="https://www.amazon.in" target="_blank">Amazon India</a>
 <a href="https://www.amazon.com" target="_blank">Amazon </a>
